# disc

./: AUTHORS  COPYING  INSTALL  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  ccopts.sh  ccver.sh  configure  configure.ac
libltdl/: acinclude.m4
src/: Makefile.am  Makefile.in  aaa_client.cfg  aaa_core.c  aaa_core.h  aaa_lock.c  aaa_lock.h  aaa_module.c  aaa_module.h  aaa_parse_uri.c  aaa_parse_uri.h  aaa_server.cfg  cfg_init.c  cfg_init.h  cfg_parser.c  cfg_parser.h  client.c  client.h  config.h  counter.h  dprint.c  dprint.h  fastlock.h  globals.h  hash.h  hash_table.c  hash_table.h  list.h  lock_alloc.h  lock_ops.h  locking.h  msg_queue.c  msg_queue.h  parser_f.h  route.c  route.h  sem.h  server.c  server.h  str.h  (+3 more)
src/client/: Makefile.am  Makefile.in
src/client/modules/: Makefile.am  Makefile.in
src/client/modules/print/: Makefile.am  Makefile.in  print.c
src/diameter_api/: Makefile.am  Makefile.in  diameter_api.h  init_conf.c  init_conf.h  sender.c  session.c  session.h
src/diameter_msg/: Makefile.am  Makefile.in  avp.c  diameter_msg.h  message.c
src/mem/: Makefile.am  Makefile.in  f_malloc.c  f_malloc.h  mem.c  mem.h  memtest.c  q_malloc.c  q_malloc.h  shm_mem.c  shm_mem.h  vq_malloc.c  vq_malloc.h
src/server/: Makefile.am  Makefile.in
src/server/modules/: Makefile.am  Makefile.in
src/server/modules/print/: Makefile.am  Makefile.in  print.c
src/transport/: Makefile.am  Makefile.in  ip_addr.h  peer.c  peer.h  resolve.h  tcp_accept.c  tcp_accept.h  tcp_receive.c  tcp_receive.h  tcp_shell.c  tcp_shell.h  trans.c  trans.h
