##
## $Id: Makefile.am,v 1.1 2003/03/24 18:45:11 andrei Exp $
##
## Process this file with automake to produce Makefile.in
##

@SET_MAKE@

noinst_LTLIBRARIES = libmem.la
libmem_la_SOURCES = f_malloc.c mem.c memtest.c q_malloc.c shm_mem.c \
					vq_malloc.c \
					f_malloc.h mem.h q_malloc.h shm_mem.h vq_malloc.h
libmem_la_LIBADD  = 
