##
## $Id: Makefile.am,v 1.2 2003/04/06 22:09:16 andrei Exp $
##
## Process this file with automake to produce Makefile.in
##

@SET_MAKE@

noinst_LTLIBRARIES = libtransport.la
libtransport_la_SOURCES =	peer.c tcp_accept.c tcp_receive.c tcp_shell.c \
							trans.c \
							ip_addr.h peer.h resolve.h tcp_accept.h \
							tcp_receive.h tcp_shell.h trans.h
libtransport_la_LIBADD =  
libtransport_la_LDFLAGS = 


