##
## $Id: Makefile.am,v 1.2 2003/04/22 18:07:45 andrei Exp $
##
## Process this file with automake to produce Makefile.in
##

@SET_MAKE@

moduledir= $(libdir)/@PACKAGE@/@client_module_dir@
module_LTLIBRARIES = print.la
print_la_SOURCES =	print.c 
print_la_LDFLAGS = -module -avoid-version
print_la_LIBADD = 



